assets/manifests/nginx-lb-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-lb-dpl
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
