assets/manifests/nginx-lb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-lb-svc
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
